[gd_scene format=3 uid="uid://bstit0er0uc8b"]

[ext_resource type="Texture2D" uid="uid://bb328j4udh1n5" path="res://assets/stars.png" id="1_adb74"]
[ext_resource type="PackedScene" uid="uid://dm1jw10c6jvt1" path="res://scenes/GUI/fps_counter.tscn" id="1_c16ls"]
[ext_resource type="Script" uid="uid://c06fx4od62njj" path="res://scripts/background/starfield_generator.gd" id="1_to7gp"]
[ext_resource type="Script" uid="uid://veeu7hiraxc1" path="res://scripts/background/background.gd" id="1_u0fll"]
[ext_resource type="FontFile" uid="uid://2xh1s6462lgr" path="res://assets/ari_w9500/ari-w9500-condensed-display.ttf" id="2_c16ls"]
[ext_resource type="Script" uid="uid://dglk6ribm782h" path="res://scripts/ship/ship.gd" id="2_rt2n2"]
[ext_resource type="Theme" uid="uid://cdqg5vqnwecyx" path="res://ui_theme.tres" id="3_7nt27"]
[ext_resource type="PackedScene" uid="uid://cp8f44ulakgww" path="res://scenes/missile.tscn" id="3_c16ls"]
[ext_resource type="Script" uid="uid://td5o3in76l7v" path="res://scripts/GUI/pause_menu.gd" id="4_xdqt8"]
[ext_resource type="Texture2D" uid="uid://dgxvxu8iiohx8" path="res://assets/health_bar_bg.png" id="5_4w45t"]
[ext_resource type="Texture2D" uid="uid://bjltt50f68alq" path="res://assets/health_bar.png" id="5_e1cbu"]
[ext_resource type="Script" uid="uid://cb2cup0fvr3ua" path="res://scripts/GUI/hud.gd" id="6_c16ls"]
[ext_resource type="Script" uid="uid://cils70phfdhxb" path="res://scripts/GUI/health_bar.gd" id="6_mngbo"]
[ext_resource type="AudioStream" uid="uid://b7s3wni4s4u5s" path="res://assets/sfx/button_focus.ogg" id="7_58gk3"]
[ext_resource type="Texture2D" uid="uid://bbhvcnmw8v4f3" path="res://assets/rocket_plumes_big.png" id="7_c1pb6"]
[ext_resource type="Script" uid="uid://dymb65j43empa" path="res://scripts/GUI/score_label.gd" id="7_c16ls"]
[ext_resource type="AudioStream" uid="uid://bg2w4eqs2s1x0" path="res://assets/sfx/pause_menu_open_close.ogg" id="7_to7gp"]
[ext_resource type="Texture2D" uid="uid://cpj1wx1nvj7ju" path="res://assets/rocket_plumes_small.png" id="8_6wevv"]
[ext_resource type="Script" uid="uid://ec4ha37blckq" path="res://scripts/managers/spawn_manager.gd" id="8_18nlu"]
[ext_resource type="Script" uid="uid://om8kwvduykse" path="res://scripts/GUI/in_game_settings.gd" id="10_adb74"]
[ext_resource type="PackedScene" uid="uid://clww1ko6j4axm" path="res://scenes/asteroids/asteroid_big.tscn" id="10_e1cbu"]
[ext_resource type="Texture2D" uid="uid://c041nfpmb8fys" path="res://assets/explosion_ship.png" id="12_01n6w"]
[ext_resource type="AudioStream" uid="uid://ccq5rq58114g" path="res://assets/sfx/laser_blast.wav" id="13_si52b"]
[ext_resource type="Script" uid="uid://va2o05eat8pu" path="res://scripts/GUI/game_over.gd" id="15_58gk3"]
[ext_resource type="Texture2D" uid="uid://dwtib53yfu1wp" path="res://assets/ship.png" id="19_6p3nn"]
[ext_resource type="Texture2D" uid="uid://c4xwd4c0xb7kc" path="res://assets/ufo.png" id="25_u0fll"]
[ext_resource type="Script" uid="uid://ba340ffws2uo2" path="res://scripts/ufo.gd" id="26_k67gn"]

[sub_resource type="GDScript" id="GDScript_rt2n2"]
script/source = "extends Camera2D
"

[sub_resource type="LabelSettings" id="LabelSettings_c16ls"]
paragraph_spacing = 3.0
font = ExtResource("2_c16ls")
font_size = 22
font_color = Color(0.99607843, 0.9529412, 0.7529412, 0.7058824)

[sub_resource type="AtlasTexture" id="AtlasTexture_r6p65"]
atlas = ExtResource("8_6wevv")
region = Rect2(0, 0, 13, 13)

[sub_resource type="AtlasTexture" id="AtlasTexture_si52b"]
atlas = ExtResource("8_6wevv")
region = Rect2(13, 0, 13, 13)

[sub_resource type="AtlasTexture" id="AtlasTexture_01n6w"]
atlas = ExtResource("8_6wevv")
region = Rect2(26, 0, 13, 13)

[sub_resource type="AtlasTexture" id="AtlasTexture_6u1mn"]
atlas = ExtResource("8_6wevv")
region = Rect2(39, 0, 13, 13)

[sub_resource type="AtlasTexture" id="AtlasTexture_6wevv"]
atlas = ExtResource("7_c1pb6")
region = Rect2(0, 0, 13, 13)

[sub_resource type="AtlasTexture" id="AtlasTexture_e1cbu"]
atlas = ExtResource("7_c1pb6")
region = Rect2(13, 0, 13, 13)

[sub_resource type="AtlasTexture" id="AtlasTexture_mngbo"]
atlas = ExtResource("7_c1pb6")
region = Rect2(26, 0, 13, 13)

[sub_resource type="AtlasTexture" id="AtlasTexture_4w45t"]
atlas = ExtResource("7_c1pb6")
region = Rect2(39, 0, 13, 13)

[sub_resource type="SpriteFrames" id="SpriteFrames_r6p65"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_r6p65")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_si52b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_01n6w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6u1mn")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6wevv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e1cbu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mngbo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4w45t")
}],
"loop": true,
"name": &"thrust",
"speed": 15.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_bcnxi"]
atlas = ExtResource("12_01n6w")
region = Rect2(0, 0, 70, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_7nt27"]
atlas = ExtResource("12_01n6w")
region = Rect2(70, 0, 70, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_k6f3i"]
atlas = ExtResource("12_01n6w")
region = Rect2(140, 0, 70, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_xdqt8"]
atlas = ExtResource("12_01n6w")
region = Rect2(210, 0, 70, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_adb74"]
atlas = ExtResource("12_01n6w")
region = Rect2(280, 0, 70, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_58gk3"]
atlas = ExtResource("12_01n6w")
region = Rect2(350, 0, 70, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_to7gp"]
atlas = ExtResource("12_01n6w")
region = Rect2(420, 0, 70, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_u0fll"]
atlas = ExtResource("12_01n6w")
region = Rect2(490, 0, 70, 52)

[sub_resource type="SpriteFrames" id="SpriteFrames_6p3nn"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bcnxi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7nt27")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k6f3i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xdqt8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_adb74")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_58gk3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_to7gp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u0fll")
}],
"loop": false,
"name": &"explosion",
"speed": 10.0
}]

[node name="Game" type="Node2D" unique_id=1709177522]

[node name="Background" type="Node2D" parent="." unique_id=558508590]
script = ExtResource("1_u0fll")

[node name="Parallax2DFar" type="Parallax2D" parent="Background" unique_id=136117735]
repeat_size = Vector2(960, 540)
follow_viewport = false

[node name="StarsField" type="Sprite2D" parent="Background/Parallax2DFar" unique_id=1738412992]
centered = false
script = ExtResource("1_to7gp")
star_count = 100

[node name="Star" type="Sprite2D" parent="Background/Parallax2DFar/StarsField" unique_id=885096901]
visible = false
texture = ExtResource("1_adb74")
hframes = 5

[node name="Parallax2DMid" type="Parallax2D" parent="Background" unique_id=1885565195]
repeat_size = Vector2(960, 540)
follow_viewport = false

[node name="StarsField" type="Sprite2D" parent="Background/Parallax2DMid" unique_id=323070727]
centered = false
script = ExtResource("1_to7gp")
star_count = 60

[node name="Star" type="Sprite2D" parent="Background/Parallax2DMid/StarsField" unique_id=747727532]
visible = false
texture = ExtResource("1_adb74")
hframes = 5

[node name="Parallax2DNear" type="Parallax2D" parent="Background" unique_id=1401273145]
repeat_size = Vector2(960, 540)
follow_viewport = false

[node name="StarField" type="Sprite2D" parent="Background/Parallax2DNear" unique_id=1460646485]
centered = false
script = ExtResource("1_to7gp")
star_count = 40

[node name="Star" type="Sprite2D" parent="Background/Parallax2DNear/StarField" unique_id=1913533934]
visible = false
texture = ExtResource("1_adb74")
hframes = 5

[node name="Camera2D" type="Camera2D" parent="." unique_id=268396936]
anchor_mode = 0
script = SubResource("GDScript_rt2n2")

[node name="FPSCounter" parent="." unique_id=819093561 instance=ExtResource("1_c16ls")]
layer = 0
visible = false

[node name="HUD" type="CanvasLayer" parent="." unique_id=1668814919]
unique_name_in_owner = true
layer = 0
script = ExtResource("6_c16ls")

[node name="Control" type="Control" parent="HUD" unique_id=1967005478]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="HUD/Control" unique_id=1286615747]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 48.0
grow_horizontal = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_right = 16

[node name="ScoreLabel" type="Label" parent="HUD/Control/MarginContainer" unique_id=676620616]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 1
text = "Score : 0"
label_settings = SubResource("LabelSettings_c16ls")
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("7_c16ls")
metadata/_edit_use_anchors_ = true

[node name="HealthBar" type="TextureProgressBar" parent="HUD/Control/MarginContainer" unique_id=1697243583]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
step = 0.0
value = 100.0
texture_under = ExtResource("5_4w45t")
texture_progress = ExtResource("5_e1cbu")
texture_progress_offset = Vector2(19, 1)
tint_under = Color(1, 1, 1, 0.74509805)
tint_progress = Color(0.32156864, 0.5647059, 0.27450982, 0.47058824)
script = ExtResource("6_mngbo")
high_color = Color(0.32156864, 0.5647059, 0.27450982, 0.47058824)
mid_color = Color(0.8784314, 0.54901963, 0.023529412, 0.47058824)
low_color = Color(0.8745098, 0.24313726, 0.13725491, 0.47058824)

[node name="PauseMenu" type="CanvasLayer" parent="." unique_id=1119899898]
unique_name_in_owner = true
layer = 10
visible = false
script = ExtResource("4_xdqt8")

[node name="ColorRect" type="ColorRect" parent="PauseMenu" unique_id=1583723371]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.02745098, 0.02745098, 0.0627451, 0.7058824)

[node name="MenuRoot" type="Control" parent="PauseMenu" unique_id=1968854068]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_7nt27")

[node name="CenterContainer" type="CenterContainer" parent="PauseMenu/MenuRoot" unique_id=1878725601]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="PauseMenu/MenuRoot/CenterContainer" unique_id=1955818530]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PauseMenu/MenuRoot/CenterContainer/PanelContainer" unique_id=748238367]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu/MenuRoot/CenterContainer/PanelContainer/MarginContainer" unique_id=2099731979]
layout_mode = 2
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="PauseMenu/MenuRoot/CenterContainer/PanelContainer/MarginContainer/VBoxContainer" unique_id=1116830050]
layout_mode = 2
theme_type_variation = &"HeaderMedium"
text = "Paused"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ResumeButton" type="Button" parent="PauseMenu/MenuRoot/CenterContainer/PanelContainer/MarginContainer/VBoxContainer" unique_id=668252123]
unique_name_in_owner = true
layout_mode = 2
text = "Resume"

[node name="SettingsButton" type="Button" parent="PauseMenu/MenuRoot/CenterContainer/PanelContainer/MarginContainer/VBoxContainer" unique_id=453083828]
layout_mode = 2
text = "Settings"

[node name="QuitButton" type="Button" parent="PauseMenu/MenuRoot/CenterContainer/PanelContainer/MarginContainer/VBoxContainer" unique_id=1699112980]
layout_mode = 2
text = "Quit"

[node name="SettingsRoot" type="Control" parent="PauseMenu" unique_id=958767433]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_7nt27")
script = ExtResource("10_adb74")

[node name="CenterContainer" type="CenterContainer" parent="PauseMenu/SettingsRoot" unique_id=962248364]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="PauseMenu/SettingsRoot/CenterContainer" unique_id=1485281694]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PauseMenu/SettingsRoot/CenterContainer/PanelContainer" unique_id=329573458]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu/SettingsRoot/CenterContainer/PanelContainer/MarginContainer" unique_id=651583455]
layout_mode = 2

[node name="Label" type="Label" parent="PauseMenu/SettingsRoot/CenterContainer/PanelContainer/MarginContainer/VBoxContainer" unique_id=367279051]
layout_mode = 2
theme_type_variation = &"HeaderMedium"
text = "Settings"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SFX" type="CheckButton" parent="PauseMenu/SettingsRoot/CenterContainer/PanelContainer/MarginContainer/VBoxContainer" unique_id=841440202]
unique_name_in_owner = true
layout_mode = 2
text = "SFX"

[node name="BackButton" type="Button" parent="PauseMenu/SettingsRoot/CenterContainer/PanelContainer/MarginContainer/VBoxContainer" unique_id=1669049151]
layout_mode = 2
text = "Back"

[node name="FocusSFX" type="AudioStreamPlayer" parent="PauseMenu" unique_id=1050855578]
stream = ExtResource("7_58gk3")
volume_db = 4.0
pitch_scale = 1.4
bus = &"SFX"

[node name="OpenCloseSFX" type="AudioStreamPlayer" parent="PauseMenu" unique_id=1633151531]
stream = ExtResource("7_to7gp")
volume_db = -4.0
bus = &"SFX"

[node name="GameOver" type="CanvasLayer" parent="." unique_id=37310075]
unique_name_in_owner = true
visible = false
script = ExtResource("15_58gk3")

[node name="Control" type="Control" parent="GameOver" unique_id=1459291248]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_7nt27")

[node name="CenterContainer" type="CenterContainer" parent="GameOver/Control" unique_id=894436871]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="GameOver/Control/CenterContainer" unique_id=1456426715]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="GameOver/Control/CenterContainer/PanelContainer" unique_id=1703890965]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="GameOver/Control/CenterContainer/PanelContainer/MarginContainer" unique_id=181508915]
layout_mode = 2

[node name="GameOver" type="Label" parent="GameOver/Control/CenterContainer/PanelContainer/MarginContainer/VBoxContainer" unique_id=1336007872]
layout_mode = 2
theme_type_variation = &"HeaderLarge"
text = "GAME OVER"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PressKey" type="Label" parent="GameOver/Control/CenterContainer/PanelContainer/MarginContainer/VBoxContainer" unique_id=138922944]
layout_mode = 2
text = "Press any key to continue"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Ship" type="CharacterBody2D" parent="." unique_id=946185912]
unique_name_in_owner = true
z_index = 500
position = Vector2(480, 382)
collision_mask = 2
script = ExtResource("2_rt2n2")
missile_scene = ExtResource("3_c16ls")
metadata/_edit_group_ = true

[node name="Area2D" type="Area2D" parent="Ship" unique_id=610386734]
collision_mask = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Ship/Area2D" unique_id=419081471]
visible = false
position = Vector2(0, 1)
polygon = PackedVector2Array(0, -23, 16, 9, -16, 9, -7.4013977, -8.197205)

[node name="Sprite" type="Sprite2D" parent="Ship" unique_id=138527113]
texture = ExtResource("19_6p3nn")
offset = Vector2(0, -6)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Ship" unique_id=387866298]
visible = false
position = Vector2(0, 1)
polygon = PackedVector2Array(0, -18, 12, 6, -12, 6)

[node name="Plumes" type="AnimatedSprite2D" parent="Ship" unique_id=975348223]
position = Vector2(0, 13)
sprite_frames = SubResource("SpriteFrames_r6p65")
animation = &"idle"
autoplay = "idle"

[node name="Explosion" type="AnimatedSprite2D" parent="Ship" unique_id=1294412027]
visible = false
sprite_frames = SubResource("SpriteFrames_6p3nn")
animation = &"explosion"
frame = 2
frame_progress = 0.3971602

[node name="MissileSFX" type="AudioStreamPlayer2D" parent="Ship" unique_id=1067711791]
stream = ExtResource("13_si52b")
bus = &"SFX"

[node name="SpawnManager" type="Node" parent="." unique_id=27467253]
script = ExtResource("8_18nlu")
asteroid_scene = ExtResource("10_e1cbu")

[node name="AsteroidContainer" type="Node2D" parent="." unique_id=1217039606]
unique_name_in_owner = true

[node name="UFO" type="Node2D" parent="." unique_id=1210863907]
position = Vector2(219, 125)
script = ExtResource("26_k67gn")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="UFO" unique_id=1699140515]
texture = ExtResource("25_u0fll")

[connection signal="pressed" from="PauseMenu/MenuRoot/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/ResumeButton" to="PauseMenu" method="_on_resume_button_pressed"]
[connection signal="pressed" from="PauseMenu/MenuRoot/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/SettingsButton" to="PauseMenu" method="_on_settings_button_pressed"]
[connection signal="pressed" from="PauseMenu/MenuRoot/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/QuitButton" to="PauseMenu" method="_on_quit_button_pressed"]
[connection signal="pressed" from="PauseMenu/SettingsRoot/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/BackButton" to="PauseMenu/SettingsRoot" method="_on_back_button_pressed"]
[connection signal="body_entered" from="Ship/Area2D" to="Ship" method="_on_area_2d_body_entered"]
